--- a/Third/MainWindow.xaml
+++ b/Third/MainWindow.xaml
@@ -7,9 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="400">
     <Window.Resources>
-        <ResourceDictionary>
-            <SolidColorBrush x:Key="ColorBrushForeground" Color="Black"></SolidColorBrush>
-            <SolidColorBrush x:Key="ColorBrushBackground" Color="White"></SolidColorBrush>
+        <SolidColorBrush x:Key="ColorBrushForeground" 
+                         Color="Black"></SolidColorBrush>
+            <SolidColorBrush x:Key="ColorBrushBackground" 
+                             Color="White"></SolidColorBrush>
+            <Image x:Key="MyImage"
+                   Source="Images/Apex-Legends-HD-Wallpapers-and-Background-Images-Wallpaper-Cart.png"
+                   Height="{Binding ElementName=SliderH,Path=Value}"
+                   Width="{Binding ElementName=SliderW,Path=Value}">
+            </Image>
+            <SolidColorBrush x:Key="ColorBrushScroll" 
+                             Color="Green"></SolidColorBrush>
             <Style x:Key="ButtonWithText" 
                    TargetType="{x:Type Button}">
                 <Style.Setters>
@@ -23,16 +31,250 @@
                             Value="Times New Roman" />
                 </Style.Setters>
             </Style>
-            <Style TargetType="{x:Type TextBlock}">
-                <Style.Setters>
-                    <Setter Property="FontSize"
-                            Value="11" />
-                    <Setter Property="FontStyle"
-                            Value="Italic"/>
-                </Style.Setters>
+            <Style x:Key="ButtonWithImage"
+                   TargetType="{x:Type Button}">
+                <Setter Property="Content"
+                        Value="{DynamicResource MyImage}"></Setter>
             </Style>
-        </ResourceDictionary>
+            <!-- <> -->
+            <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
+            <SolidColorBrush x:Key="NormalBrush" Color="#888" />
+            <SolidColorBrush x:Key="NormalBorderBrush" Color="#888" />
+            <SolidColorBrush x:Key="HorizontalNormalBrush" Color="#888" />
+            <SolidColorBrush x:Key="HorizontalNormalBorderBrush" Color="#888" />
+            <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
+            <LinearGradientBrush x:Key="PressedBrush"
+                StartPoint="0,0" EndPoint="0,1">
+                <GradientBrush.GradientStops>
+                    <GradientStopCollection>
+                        <GradientStop Color="#BBB" Offset="0.0"/>
+                        <GradientStop Color="#EEE" Offset="0.1"/>
+                        <GradientStop Color="#EEE" Offset="0.9"/>
+                        <GradientStop Color="#FFF" Offset="1.0"/>
+                    </GradientStopCollection>
+                </GradientBrush.GradientStops>
+            </LinearGradientBrush>
+            <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="Focusable" Value="false"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type RepeatButton}">
+                            <Border
+              Name="Border"
+              Margin="1"
+              CornerRadius="2"
+              Background="{StaticResource NormalBrush}"
+              BorderBrush="{StaticResource NormalBorderBrush}"
+              BorderThickness="1">
+                                <Path
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Fill="{StaticResource GlyphBrush}"
+                Data="{Binding Path=Content,
+                    RelativeSource={RelativeSource TemplatedParent}}" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsPressed" Value="true">
+                                    <Setter TargetName="Border" Property="Background"
+                                    Value="{StaticResource PressedBrush}" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="false">
+                                    <Setter Property="Foreground"
+                                    Value="{StaticResource DisabledForegroundBrush}"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="ScrollBarPageButton" TargetType="{x:Type RepeatButton}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="IsTabStop" Value="false"/>
+                <Setter Property="Focusable" Value="false"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type RepeatButton}">
+                            <Border Background="Transparent" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="true"/>
+                <Setter Property="IsTabStop" Value="false"/>
+                <Setter Property="Focusable" Value="false"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
+                            <Border
+              CornerRadius="2"
+              Background="{TemplateBinding Background}"
+              BorderBrush="{TemplateBinding BorderBrush}"
+              BorderThickness="1" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <ControlTemplate x:Key="VerticalScrollBar"
+                                 TargetType="{x:Type ScrollBar}">
+                <Grid >
+                    <Grid.RowDefinitions>
+                        <RowDefinition MaxHeight="18"/>
+                        <RowDefinition Height="0.00001*"/>
+                        <RowDefinition MaxHeight="18"/>
+                    </Grid.RowDefinitions>
+                    <Border
+          Grid.RowSpan="3"
+          CornerRadius="2"
+          Background="#F0F0F0" />
+                    <RepeatButton
+          Grid.Row="0"
+          Style="{StaticResource ScrollBarLineButton}"
+          Height="18"
+          Command="ScrollBar.LineUpCommand"
+          Content="M 0 4 L 8 4 L 4 0 Z" />
+                    <Track
+          Name="PART_Track"
+          Grid.Row="1"
+          IsDirectionReversed="true">
+                        <Track.DecreaseRepeatButton>
+                            <RepeatButton
+              Style="{StaticResource ScrollBarPageButton}"
+              Command="ScrollBar.PageUpCommand" />
+                        </Track.DecreaseRepeatButton>
+                        <Track.Thumb>
+                            <Thumb
+              Style="{StaticResource ScrollBarThumb}"
+              Margin="1,0,1,0"
+              Background="{StaticResource HorizontalNormalBrush}"
+              BorderBrush="{StaticResource HorizontalNormalBorderBrush}" />
+                        </Track.Thumb>
+                        <Track.IncreaseRepeatButton>
+                            <RepeatButton
+              Style="{StaticResource ScrollBarPageButton}"
+              Command="ScrollBar.PageDownCommand" />
+                        </Track.IncreaseRepeatButton>
+                    </Track>
+                    <RepeatButton
+          Grid.Row="2"
+          Style="{StaticResource ScrollBarLineButton}"
+          Height="18"
+          Command="ScrollBar.LineDownCommand"
+          Content="M 0 0 L 4 4 L 8 0 Z"/>
+                </Grid>
+            </ControlTemplate>
+            <ControlTemplate x:Key="HorizontalScrollBar"
+                TargetType="{x:Type ScrollBar}">
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition MaxWidth="18"/>
+                        <ColumnDefinition Width="0.00001*"/>
+                        <ColumnDefinition MaxWidth="18"/>
+                    </Grid.ColumnDefinitions>
+                    <Border
+          Grid.ColumnSpan="3"
+          CornerRadius="2"
+          Background="#F0F0F0" />
+                    <RepeatButton
+          Grid.Column="0"
+          Style="{StaticResource ScrollBarLineButton}"
+          Width="18"
+          Command="ScrollBar.LineLeftCommand"
+          Content="M 4 0 L 4 8 L 0 4 Z" />
+                    <Track
+          Name="PART_Track"
+          Grid.Column="1"
+          IsDirectionReversed="False">
+                        <Track.DecreaseRepeatButton>
+                            <RepeatButton
+              Style="{StaticResource ScrollBarPageButton}"
+              Command="ScrollBar.PageLeftCommand" />
+                        </Track.DecreaseRepeatButton>
+                        <Track.Thumb>
+                            <Thumb
+              Style="{StaticResource ScrollBarThumb}"
+              Margin="0,1,0,1"
+              Background="{DynamicResource ColorBrushScroll}"
+              BorderBrush="{DynamicResource ColorBrushScroll}" />
+                        </Track.Thumb>
+                        <Track.IncreaseRepeatButton>
+                            <RepeatButton
+              Style="{StaticResource ScrollBarPageButton}"
+              Command="ScrollBar.PageRightCommand" />
+                        </Track.IncreaseRepeatButton>
+                    </Track>
+                    <RepeatButton
+          Grid.Column="2"
+          Style="{StaticResource ScrollBarLineButton}"
+          Width="18"
+          Command="ScrollBar.LineRightCommand"
+          Content="M 0 0 L 4 4 L 0 8 Z"/>
+                </Grid>
+            </ControlTemplate>
+            <!-- ReSharper disable once Xaml.RedundantResource -->
+            <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Style.Triggers>
+                <Trigger Property="Orientation" Value="Horizontal">
+                    <Setter Property="Width" Value="Auto"/>
+                    <Setter Property="Height" Value="18" />
+                    <Setter Property="Template"
+                        Value="{StaticResource HorizontalScrollBar}" />
+                </Trigger>
+                <Trigger Property="Orientation" Value="Vertical">
+                    <Setter Property="Width" Value="18"/>
+                    <Setter Property="Height" Value="Auto" />
+                    <Setter Property="Template"
+                        Value="{StaticResource VerticalScrollBar}" />
+                </Trigger>
+            </Style.Triggers>
+            </Style>
+            <Style x:Key="MyScrollViewer" TargetType="{x:Type ScrollViewer}">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ScrollViewer}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <ScrollContentPresenter Grid.Column="1"/>
+
+                            <ScrollBar Grid.Row="0" Grid.Column="0" Name="PART_VerticalScrollBar"
+                                       Value="{TemplateBinding VerticalOffset}"
+                                       Maximum="{TemplateBinding ScrollableHeight}"
+                                       ViewportSize="{TemplateBinding ViewportHeight}"
+                                       Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
+                            <ScrollBar Name="PART_HorizontalScrollBar"
+            Orientation="Horizontal"
+            Grid.Row="1"
+            Grid.Column="1"
+            Value="{TemplateBinding HorizontalOffset}"
+            Maximum="{TemplateBinding ScrollableWidth}"
+            ViewportSize="{TemplateBinding ViewportWidth}"
+            Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
+
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            </Style>
+            <!-- <> -->
     </Window.Resources>
+    
+    
+    
     <Window.Content>
         <Grid ShowGridLines="True">
             <Grid.ColumnDefinitions>
@@ -44,47 +286,75 @@
                         Background="Bisque">
                 <TextBlock Text="Elements" 
                            HorizontalAlignment="Center"/>
-                <Button Style="{StaticResource ButtonWithText}"
-                        Margin="0 10"
-                        Content="TestButtonWithText" />
+                <ScrollViewer     RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Stretch"
+                        Margin="0,0,0,0"
+                                  Width="Auto" HorizontalScrollBarVisibility="Visible"
+                                  Style="{StaticResource MyScrollViewer}">
+                    <StackPanel>
+                        <Button Style="{StaticResource ButtonWithText}"
+                                Margin="0 10"
+                                Content="TestButtonWithText" />
+                        <Button Style="{DynamicResource ButtonWithImage}"
+                                Click="ChangeImage_OnClick"></Button>
+                    </StackPanel>
+                </ScrollViewer>
             </StackPanel>
             <StackPanel Grid.Column="1" 
                         HorizontalAlignment="Center"
                         Background="Bisque">
                 <TextBlock Text="Properties" 
                            HorizontalAlignment="Center"/>
+                <TextBlock Text="___ButtonWithText___"
+                           HorizontalAlignment="Center"></TextBlock>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="0 0 5 0">Font size:</TextBlock>
+                    <TextBlock Margin="0 0 5 0"
+                               VerticalAlignment="Center">Font size:</TextBlock>
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition MinWidth="20" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-            
-                        <TextBox x:Name="NumericUpDown" Grid.Column="0"
-                                 Text="11"></TextBox>
+                        <TextBox x:Name="NumericUpDown" 
+                                 Grid.Column="0"
+                                 VerticalAlignment="Center"
+                                 Text="11"
+                                 MinHeight="27"></TextBox>
                         <StackPanel Grid.Column="1" 
                                     Orientation="Vertical">
-                            <Button FontSize="7" Click="ButtonUp_OnClick">↑</Button>
-                            <Button FontSize="7" Click="ButtonDown_OnClick">↓</Button>
+                            <Button FontSize="7" 
+                                    Click="ButtonUp_OnClick"
+                                    MinWidth="10">↑</Button>
+                            <Button FontSize="7" 
+                                    Click="ButtonDown_OnClick">↓</Button>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
-                
-                <Button x:Name="ChangeBackground" 
-                        Content="ChangeBackground"
+                <Button Content="ChangeBackground"
                         Click="ChangeBackground_OnClick"
                         Margin="5"
-                        MinHeight="25">
+                        MinHeight="20">
                 </Button>
-                
-                <Button x:Name="ChangeForeground" 
-                        Content="ChangeForeground"
+                <Button Content="ChangeForeground"
                         Click="ChangeForeground_OnClick"
                         Margin="5"
-                        MinHeight="25">
+                        MinHeight="20">
                 </Button>
-                
+                <TextBlock Text="___ButtonWithImage___"
+                           HorizontalAlignment="Center"></TextBlock>
+                <Slider x:Name="SliderH"
+                        Minimum="10"
+                        Maximum="500"
+                        Value="150"
+                        Margin="3"></Slider>
+                <Slider x:Name="SliderW"
+                        Minimum="10"
+                        Maximum="500"
+                        Value="200"
+                        Margin="3"></Slider>
+                <TextBlock Text="___ScrollViewer___"
+                           HorizontalAlignment="Center"></TextBlock>
+                <Button Click="ButtonScroll_OnClick"
+                        Content="ChangeScrollColor"></Button>
             </StackPanel>
         </Grid>
     </Window.Content>
