--- a/Third/MainWindow.xaml
+++ b/Third/MainWindow.xaml
@@ -150,8 +150,8 @@
                             <Thumb
               Style="{StaticResource ScrollBarThumb}"
               Margin="1,0,1,0"
-              Background="{StaticResource HorizontalNormalBrush}"
-              BorderBrush="{StaticResource HorizontalNormalBorderBrush}" />
+              Background="{DynamicResource ColorBrushScroll}"
+              BorderBrush="{DynamicResource ColorBrushScroll}" />
                         </Track.Thumb>
                         <Track.IncreaseRepeatButton>
                             <RepeatButton
@@ -286,10 +286,11 @@
                         Background="Bisque">
                 <TextBlock Text="Elements" 
                            HorizontalAlignment="Center"/>
-                <ScrollViewer     RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Stretch"
-                        Margin="0,0,0,0"
-                                  Width="Auto" HorizontalScrollBarVisibility="Visible"
-                                  Style="{StaticResource MyScrollViewer}">
+                <ScrollViewer RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Stretch"
+                        Margin="0,0,0,0" HorizontalScrollBarVisibility="Visible"
+                                  Style="{StaticResource MyScrollViewer}"
+                        Height="150"
+                        Width="150">
                     <StackPanel>
                         <Button Style="{StaticResource ButtonWithText}"
                                 Margin="0 10"
