--- a/ThirdPartTwo_Elements/Views/App.xaml
+++ b/ThirdPartTwo_Elements/Views/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="ThirdPartTwo_Elements.App"
+﻿<Application x:Class="ThirdPartTwo_Elements.Views.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ThirdPartTwo_Elements"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
