--- a/ThirdPartTwo_Elements/Views/MainWindow.xaml
+++ b/ThirdPartTwo_Elements/Views/MainWindow.xaml
@@ -4,11 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:ThirdPartTwo_Elements.Views"
+        xmlns:modelViews="clr-namespace:ThirdPartTwo_Elements.ModelViews"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     
+        <Window.DataContext>
+            <modelViews:SpinnerViewModel />
+        </Window.DataContext>
+        
         <Window.Content>
-            <Grid Background="DarkOliveGreen">
+            <Grid ShowGridLines="True" Background="DarkOliveGreen">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -19,8 +24,28 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 
-                <views:Spinner Grid.Row="0" Grid.Column="1"/>
+                <views:Spinner Grid.Row="0" Grid.Column="0" />
                 
+                <StackPanel Grid.Row="1" Grid.Column="0">
+                    <Button Content="Change Colour" Command="{Binding ButtonChangeColour}"
+                            Background="{Binding SpinnerModel.ColourOfDots}"></Button>
+                </StackPanel>
+                <Grid Grid.Row="1" Grid.Column="0" Background="White" MaxWidth="50" MaxHeight="35">
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition MaxWidth="20"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+                               Text="{Binding SpinnerModel.SizeOfDots}"
+                               HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                    <Button Grid.Row="0" Grid.Column="1" Content="+" Command="{Binding ButtonUpClicked}"/>
+                    <Button Grid.Row="1" Grid.Column="1" Content="-" Command="{Binding ButtonDownClicked}"/>
+                </Grid>
             </Grid>
         </Window.Content>
     
