--- a/ThirdPartTwo_Elements/Views/Spinner.xaml
+++ b/ThirdPartTwo_Elements/Views/Spinner.xaml
@@ -3,27 +3,27 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:modelViews="clr-namespace:ThirdPartTwo_Elements.ModelViews"
+             xmlns:vm="clr-namespace:ThirdPartTwo_Elements.ModelViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
-             x:Name="UserControl">
+             x:Name="SpinnerControl">
 	
 	<UserControl.DataContext>
-		<modelViews:SpinnerViewModel />
+		<vm:SpinnerViewModel ></vm:SpinnerViewModel>
 	</UserControl.DataContext>
 	
 	<UserControl.Resources>
 		<Style TargetType="Ellipse">
 		    <Setter Property="Fill"
-		            Value="{Binding SpinnerModel.ColourOfDots}"></Setter>
+		            Value="{Binding PropColor}"></Setter>
 		    <Setter Property="Width"
-		            Value="{Binding SpinnerModel.SizeOfDots}"></Setter>
+		            Value="{Binding PropSize}"></Setter>
 		    <Setter Property="Height"
-		            Value="{Binding SpinnerModel.SizeOfDots}"></Setter>
+		            Value="{Binding PropSize}"></Setter>
 		    <Setter Property="Opacity"
 		            Value="0"></Setter>
 	    </Style>
-	    <Storyboard x:Key="Spinner" RepeatBehavior="Forever" BeginTime="00:00:00">
+		<Storyboard x:Key="Spinner" RepeatBehavior="Forever" BeginTime="00:00:00">
 			<DoubleAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="Ellipse01" Storyboard.TargetProperty="(UIElement.Opacity)">
 				<EasingDoubleKeyFrame KeyTime="00:00:00" Value="1"/>
 				<EasingDoubleKeyFrame KeyTime="00:00:00.1" Value="0.5"/>
