--- a/ThirdPartTwo_Elements/Views/DialogHostElement.xaml
+++ b/ThirdPartTwo_Elements/Views/DialogHostElement.xaml
@@ -6,21 +6,29 @@
              xmlns:vm="clr-namespace:ThirdPartTwo_Elements.ModelViews"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
+    
     <UserControl.DataContext>
         <vm:DialogHostViewModel></vm:DialogHostViewModel>
     </UserControl.DataContext>
     
-    <Border Background="Black"
-            CornerRadius="{Binding DialogHostModel.Radius}">
-            <Border.InputBindings>
-                <MouseBinding 
-                    MouseAction="LeftClick" 
-                    Command="{Binding OpenDialogCommand}"></MouseBinding>
-            </Border.InputBindings>
-            <Border Background="White" Opacity="{Binding DialogHostModel.Transparency}">
-                <ContentPresenter>
+    <UserControl.Template>
+        <ControlTemplate TargetType="UserControl">
+            <Grid>
+                <Border Background="Black"
+                        Opacity="{Binding DialogHostModel.Transparency}">
+                    <Border Background="White"
+                            CornerRadius="{Binding DialogHostModel.Radius}">
+                    </Border>
+                    <Border.InputBindings>
+                        <MouseBinding MouseAction="LeftClick"
+                                      Command="{Binding OpenDialogCommand}"></MouseBinding>
+                    </Border.InputBindings>
+                </Border>
+                <ContentPresenter x:Name="Presenter" Width="150" Height="100">
                     
                 </ContentPresenter>
-            </Border>
-        </Border>
+            </Grid>
+        </ControlTemplate>
+    </UserControl.Template>
+    
 </UserControl>
