Message done(работает и похуй)

--- a/ThirdPartTwo_Elements/Views/SpinnerDialog.xaml
+++ b/ThirdPartTwo_Elements/Views/SpinnerDialog.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Content>
-        <v:DialogHostElement Grid.Row="0">
+        <v:DialogHostElement>
             <Grid>
                 <Grid.DataContext>
                     <vm:SpinnerDialogViewModel></vm:SpinnerDialogViewModel>
