--- a/ThirdPartTwo_Elements/Views/MainWindow.xaml
+++ b/ThirdPartTwo_Elements/Views/MainWindow.xaml
@@ -8,264 +8,85 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     
-        <Window.Resources>
-            <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
-            <SolidColorBrush x:Key="NormalBrush" Color="#888" />
-            <SolidColorBrush x:Key="NormalBorderBrush" Color="#888" />
-            <SolidColorBrush x:Key="HorizontalNormalBrush" Color="#888" />
-            <SolidColorBrush x:Key="HorizontalNormalBorderBrush" Color="#888" />
-            <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
-            <LinearGradientBrush x:Key="PressedBrush"
-                StartPoint="0,0" EndPoint="0,1">
-                <GradientBrush.GradientStops>
-                    <GradientStopCollection>
-                        <GradientStop Color="#BBB" Offset="0.0"/>
-                        <GradientStop Color="#EEE" Offset="0.1"/>
-                        <GradientStop Color="#EEE" Offset="0.9"/>
-                        <GradientStop Color="#FFF" Offset="1.0"/>
-                    </GradientStopCollection>
-                </GradientBrush.GradientStops>
-            </LinearGradientBrush>
-            <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
-                <Setter Property="SnapsToDevicePixels" Value="True"/>
-                <Setter Property="OverridesDefaultStyle" Value="true"/>
-                <Setter Property="Focusable" Value="false"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type RepeatButton}">
-                            <Border
-              Name="Border"
-              Margin="1"
-              CornerRadius="2"
-              Background="{StaticResource NormalBrush}"
-              BorderBrush="{StaticResource NormalBorderBrush}"
-              BorderThickness="1">
-                                <Path
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Fill="{StaticResource GlyphBrush}"
-                Data="{Binding Path=Content,
-                    RelativeSource={RelativeSource TemplatedParent}}" />
-                            </Border>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsPressed" Value="true">
-                                    <Setter TargetName="Border" Property="Background"
-                                    Value="{StaticResource PressedBrush}" />
-                                </Trigger>
-                                <Trigger Property="IsEnabled" Value="false">
-                                    <Setter Property="Foreground"
-                                    Value="{StaticResource DisabledForegroundBrush}"/>
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="ScrollBarPageButton" TargetType="{x:Type RepeatButton}">
-                <Setter Property="SnapsToDevicePixels" Value="True"/>
-                <Setter Property="OverridesDefaultStyle" Value="true"/>
-                <Setter Property="IsTabStop" Value="false"/>
-                <Setter Property="Focusable" Value="false"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type RepeatButton}">
-                            <Border Background="Transparent" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
-                <Setter Property="SnapsToDevicePixels" Value="True"/>
-                <Setter Property="OverridesDefaultStyle" Value="true"/>
-                <Setter Property="IsTabStop" Value="false"/>
-                <Setter Property="Focusable" Value="false"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Thumb}">
-                            <Border
-              CornerRadius="2"
-              Background="{TemplateBinding Background}"
-              BorderBrush="{TemplateBinding BorderBrush}"
-              BorderThickness="1" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <ControlTemplate x:Key="VerticalScrollBar"
-                                 TargetType="{x:Type ScrollBar}">
-                <Grid >
-                    <Grid.RowDefinitions>
-                        <RowDefinition MaxHeight="18"/>
-                        <RowDefinition Height="0.00001*"/>
-                        <RowDefinition MaxHeight="18"/>
-                    </Grid.RowDefinitions>
-                    <Border
-          Grid.RowSpan="3"
-          CornerRadius="2"
-          Background="#F0F0F0" />
-                    <RepeatButton
-          Grid.Row="0"
-          Style="{StaticResource ScrollBarLineButton}"
-          Height="18"
-          Command="ScrollBar.LineUpCommand"
-          Content="M 0 4 L 8 4 L 4 0 Z" />
-                    <Track
-          Name="PART_Track"
-          Grid.Row="1"
-          IsDirectionReversed="true">
-                        <Track.DecreaseRepeatButton>
-                            <RepeatButton
-              Style="{StaticResource ScrollBarPageButton}"
-              Command="ScrollBar.PageUpCommand" />
-                        </Track.DecreaseRepeatButton>
-                        <Track.Thumb>
-                            <Thumb
-              Style="{StaticResource ScrollBarThumb}"
-              Margin="1,0,1,0"
-              Background="{DynamicResource ColorBrushScroll}"
-              BorderBrush="{DynamicResource ColorBrushScroll}" />
-                        </Track.Thumb>
-                        <Track.IncreaseRepeatButton>
-                            <RepeatButton
-              Style="{StaticResource ScrollBarPageButton}"
-              Command="ScrollBar.PageDownCommand" />
-                        </Track.IncreaseRepeatButton>
-                    </Track>
-                    <RepeatButton
-          Grid.Row="2"
-          Style="{StaticResource ScrollBarLineButton}"
-          Height="18"
-          Command="ScrollBar.LineDownCommand"
-          Content="M 0 0 L 4 4 L 8 0 Z"/>
-                </Grid>
-            </ControlTemplate>
-            <ControlTemplate x:Key="HorizontalScrollBar"
-                TargetType="{x:Type ScrollBar}">
-                <Grid >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition MaxWidth="18"/>
-                        <ColumnDefinition Width="0.00001*"/>
-                        <ColumnDefinition MaxWidth="18"/>
-                    </Grid.ColumnDefinitions>
-                    <Border
-          Grid.ColumnSpan="3"
-          CornerRadius="2"
-          Background="#F0F0F0" />
-                    <RepeatButton
-          Grid.Column="0"
-          Style="{StaticResource ScrollBarLineButton}"
-          Width="18"
-          Command="ScrollBar.LineLeftCommand"
-          Content="M 4 0 L 4 8 L 0 4 Z" />
-                    <Track
-          Name="PART_Track"
-          Grid.Column="1"
-          IsDirectionReversed="False">
-                        <Track.DecreaseRepeatButton>
-                            <RepeatButton
-              Style="{StaticResource ScrollBarPageButton}"
-              Command="ScrollBar.PageLeftCommand" />
-                        </Track.DecreaseRepeatButton>
-                        <Track.Thumb>
-                            <Thumb
-              Style="{StaticResource ScrollBarThumb}"
-              Margin="0,1,0,1"
-              Background="{DynamicResource ColorBrushScroll}"
-              BorderBrush="{DynamicResource ColorBrushScroll}" />
-                        </Track.Thumb>
-                        <Track.IncreaseRepeatButton>
-                            <RepeatButton
-              Style="{StaticResource ScrollBarPageButton}"
-              Command="ScrollBar.PageRightCommand" />
-                        </Track.IncreaseRepeatButton>
-                    </Track>
-                    <RepeatButton
-          Grid.Column="2"
-          Style="{StaticResource ScrollBarLineButton}"
-          Width="18"
-          Command="ScrollBar.LineRightCommand"
-          Content="M 0 0 L 4 4 L 0 8 Z"/>
-                </Grid>
-            </ControlTemplate>
-            <!-- ReSharper disable once Xaml.RedundantResource -->
-            <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
-            <Setter Property="SnapsToDevicePixels" Value="True"/>
-            <Setter Property="OverridesDefaultStyle" Value="true"/>
-            <Style.Triggers>
-                <Trigger Property="Orientation" Value="Horizontal">
-                    <Setter Property="Width" Value="Auto"/>
-                    <Setter Property="Height" Value="18" />
-                    <Setter Property="Template"
-                        Value="{StaticResource HorizontalScrollBar}" />
-                </Trigger>
-                <Trigger Property="Orientation" Value="Vertical">
-                    <Setter Property="Width" Value="18"/>
-                    <Setter Property="Height" Value="Auto" />
-                    <Setter Property="Template"
-                        Value="{StaticResource VerticalScrollBar}" />
-                </Trigger>
-            </Style.Triggers>
-            </Style>
-            <Style x:Key="MyScrollViewer" TargetType="{x:Type ScrollViewer}">
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ScrollViewer}">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <ScrollContentPresenter Grid.Column="1"/>
-
-                            <ScrollBar Grid.Row="0" Grid.Column="0" Name="PART_VerticalScrollBar"
-                                       Value="{TemplateBinding VerticalOffset}"
-                                       Maximum="{TemplateBinding ScrollableHeight}"
-                                       ViewportSize="{TemplateBinding ViewportHeight}"
-                                       Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}"/>
-                            <ScrollBar Name="PART_HorizontalScrollBar"
-            Orientation="Horizontal"
-            Grid.Row="1"
-            Grid.Column="1"
-            Value="{TemplateBinding HorizontalOffset}"
-            Maximum="{TemplateBinding ScrollableWidth}"
-            ViewportSize="{TemplateBinding ViewportWidth}"
-            Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}"/>
-
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            </Style>
-        </Window.Resources>
-    
         <Window.Content>
             <TabControl>
                 <TabItem Header="MessageDialog">
                     <Grid>
+                        <Grid.DataContext>
+                            <vm:MessageDialogViewModel x:Name="MesVm"></vm:MessageDialogViewModel>
+                        </Grid.DataContext>
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
-                        <views:DialogHostElement Grid.Row="0">
-                            <ScrollViewer Style="{StaticResource MyScrollViewer}" 
-                                          VerticalScrollBarVisibility="Auto"
-                                          HorizontalScrollBarVisibility="Auto">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition></RowDefinition>
-                                        <RowDefinition></RowDefinition>
-                                    </Grid.RowDefinitions>
-                                    <TextBox Grid.Row="0" TextWrapping="Wrap"></TextBox>
-                                    <Button Grid.Row="1" Content="OK"></Button>
-                                </Grid>
-                            </ScrollViewer>
-                        </views:DialogHostElement>
+                        <views:MessageDialog x:Name="MessageDialog" 
+                                             Grid.Row="0"></views:MessageDialog>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" 
+                                        VerticalAlignment="Center" 
+                                        HorizontalAlignment="Center">
+                                <TextBox x:Name="BoxWithText"
+                                         TextWrapping="Wrap" 
+                                         MinWidth="100"
+                                         MinHeight="60"
+                                         Text="{Binding MessageDialogModel.TextInTextBlock}"></TextBox>
+                                <Button Content="Accept"
+                                        Click="ButtonMessage_OnClick"></Button>
+                            </StackPanel>
+                            <Grid Grid.Column="1" Background="White" MaxWidth="50" MaxHeight="35">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                    <ColumnDefinition MaxWidth="20"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+                                           Text="{Binding MessageDialogModel.FontSize}"
+                                           HorizontalAlignment="Center" 
+                                           VerticalAlignment="Center"></TextBlock>
+                                <Button Grid.Row="0" Grid.Column="1" Content="+" Command="{Binding OnButtonUp}"/>
+                                <Button Grid.Row="1" Grid.Column="1" Content="-" Command="{Binding OnButtonDown}"/>
+                            </Grid>
+                            <ComboBox Grid.Column="2"
+                                      SelectionChanged="Selector_OnSelectionChanged"
+                                      HorizontalAlignment="Center"
+                                      VerticalAlignment="Center"
+                                      MinWidth="70">
+                                <ComboBoxItem>Ok</ComboBoxItem>
+                                <ComboBoxItem>YesNo</ComboBoxItem>
+                                <ComboBoxItem>OkCancel</ComboBoxItem>
+                            </ComboBox>
+                        </Grid>
+                        <Grid Grid.Row="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <ComboBox SelectionChanged="ComboBoxCommands_OnSelectionChanged"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          MinWidth="70">
+                                    <ComboBoxItem>Nothing</ComboBoxItem>
+                                    <ComboBoxItem>DoubleText</ComboBoxItem>
+                                    <ComboBoxItem>RemoveText</ComboBoxItem>
+                                </ComboBox>
+                                <Button Content="Accept" Command="{Binding OnButtonCommand}"></Button>
+                            </StackPanel>
+                            <Button Grid.Column="1" 
+                                    Click="ButtonScroll_OnClick"
+                                    Content="ChangeScrollColor"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"></Button>
+                        </Grid>
                     </Grid>
                 </TabItem>
                 <TabItem Header="SpinnerDialog">
@@ -279,7 +100,7 @@
                         </Grid>
                         <Grid Grid.Row="1">
                             <Grid.DataContext>
-                                <vm:SpinnerDialogViewModel></vm:SpinnerDialogViewModel>
+                                <vm:SpinnerDialogViewModel x:Name="DialogVm"></vm:SpinnerDialogViewModel>
                             </Grid.DataContext>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition></ColumnDefinition>
@@ -290,7 +111,7 @@
                                         Text="{Binding SpinnerDialogModel.Text}" 
                                          Width="100" 
                                          Height="30"></TextBox>
-                                <Button Click="ButtonBase_OnClick"
+                                <Button Click="ButtonSpinner_OnClick"
                                         Width="100" 
                                         Height="30"
                                         Content="Accept"></Button>
@@ -374,5 +195,4 @@
                 </TabItem>
             </TabControl>
         </Window.Content>
-    
 </Window>
